--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "chai": "^4.3.7",
-    "chai-as-promised": "^7.1.1",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,5 +35,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "chai-as-promised": "^7.1.1",
+    "eth-gas-reporter": "^0.2.25",
+    "solidity-coverage": "^0.8.2"
   }
 }
